// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gitt at StatusDot rendres  Når StatusDot har type="attachment". Så skal komponenten ha en SVG-fil. 1`] = `
<div>
  <div
    class="statusdot"
    data-analyticsid="status-dot"
    data-testid="statusdot"
  >
    <span
      class="statusdot__dot statusdot__dot--icon"
    >
      <svg
        aria-hidden="true"
        class="hnds-style-icon"
        data-analyticsid="icon"
        fill="black"
        focusable="false"
        height="24"
        role="presentation"
        style="min-width: 24px; min-height: 24px;"
        viewBox="0 0 48 48"
        width="24"
      >
        <path
          d="M12 4.586c-1.798 0-3.27 1.384-3.27 3.1v11.23h1.005V7.686c0-1.148 1.009-2.095 2.265-2.095 1.257 0 2.265.947 2.265 2.094V17.6c0 .5-.355.81-.868.81s-.861-.341-.861-.81V9.467H11.53v8.132c0 1.14.833 1.815 1.867 1.815s1.874-.83 1.874-1.815V7.685c0-1.715-1.473-3.1-3.271-3.1Z"
        />
      </svg>
    </span>
    <span
      class="statusdot__label statusdot__label--icon"
    >
      Eksempeltekst
    </span>
  </div>
</div>
`;

exports[`Gitt at StatusDot rendres  Når StatusDot har type="group". Så skal komponenten ha en SVG-fil. 1`] = `
<div>
  <div
    class="statusdot"
    data-analyticsid="status-dot"
    data-testid="statusdot"
  >
    <span
      class="statusdot__dot statusdot__dot--icon"
    >
      <svg
        aria-hidden="true"
        class="hnds-style-icon"
        data-analyticsid="icon"
        fill="black"
        focusable="false"
        height="24"
        role="presentation"
        style="min-width: 24px; min-height: 24px;"
        viewBox="0 0 48 48"
        width="24"
      >
        <path
          d="M8.812 5.18h-.274a4.639 4.639 0 0 0-4.644 4.65v2.276a4.639 4.639 0 0 0 4.644 4.65h.274a4.64 4.64 0 0 0 4.644-4.65V9.83a4.64 4.64 0 0 0-4.644-4.65m4.07 14.526c-.076-.05-.15-.076-.226-.126a8.236 8.236 0 0 1-3.844.926h-.274a8.113 8.113 0 0 1-3.796-.926A8.612 8.612 0 0 0 0 27.306v2.1h17.376v-2.1c0-3.3-1.798-6.15-4.494-7.6m12.356-5.55a8.235 8.235 0 0 1-3.844.924h-.274a8.104 8.104 0 0 1-3.794-.924 9.173 9.173 0 0 0-2.772 2.198c4.044 2.152 6.566 6.3 6.566 10.952v2.1h8.838V21.88c0-3.4-1.898-6.3-4.72-7.724m.864-9.504v2.282a4.646 4.646 0 0 1-4.644 4.65h-.274a4.648 4.648 0 0 1-4.646-4.65V4.652c0-2.57 2.08-4.652 4.646-4.652h.274a4.647 4.647 0 0 1 4.644 4.652"
          fill-rule="evenodd"
          transform="translate(8, 8.2966)"
        />
      </svg>
    </span>
    <span
      class="statusdot__label statusdot__label--icon"
    >
      Eksempeltekst
    </span>
  </div>
</div>
`;

exports[`Gitt at StatusDot rendres  Når StatusDot har type="noaccess". Så skal komponenten ha en SVG-fil. 1`] = `
<div>
  <div
    class="statusdot"
    data-analyticsid="status-dot"
    data-testid="statusdot"
  >
    <span
      class="statusdot__dot statusdot__dot--icon"
    >
      <svg
        aria-hidden="true"
        class="hnds-style-icon"
        data-analyticsid="icon"
        fill="#B62E1C"
        focusable="false"
        height="24"
        role="presentation"
        style="min-width: 24px; min-height: 24px;"
        viewBox="0 0 48 48"
        width="24"
      >
        <path
          d="M13.4 26.1h21.2v-4.2H13.4v4.2ZM24 9C15.728 9 9 15.728 9 24s6.728 15 15 15c8.27 0 15-6.728 15-15S32.27 9 24 9Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="statusdot__label statusdot__label--icon"
    >
      Eksempeltekst
    </span>
  </div>
</div>
`;

exports[`Gitt at StatusDot rendres  Når StatusDot har type="recurring". Så skal komponenten ha en SVG-fil. 1`] = `
<div>
  <div
    class="statusdot"
    data-analyticsid="status-dot"
    data-testid="statusdot"
  >
    <span
      class="statusdot__dot statusdot__dot--icon"
    >
      <svg
        aria-hidden="true"
        class="hnds-style-icon"
        data-analyticsid="icon"
        fill="black"
        focusable="false"
        height="24"
        role="presentation"
        style="min-width: 24px; min-height: 24px;"
        viewBox="0 0 48 48"
        width="24"
      >
        <path
          d="M38.726 24.194c0 8.196-6.668 14.864-14.864 14.864-7.028 0-13.152-4.992-14.56-11.87l2.744-.56c1.14 5.578 6.11 9.628 11.816 9.628 6.652 0 12.064-5.41 12.064-12.062 0-6.652-5.412-12.062-12.064-12.062-3.1 0-6.05 1.218-8.272 3.312h5.248v2.802h-9.516l-.004-9.89h2.802v4.624a14.893 14.893 0 0 1 9.742-3.648c8.196 0 14.864 6.666 14.864 14.862"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="statusdot__label statusdot__label--icon"
    >
      Eksempeltekst
    </span>
  </div>
</div>
`;
